# rfmarkit-esp-node

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  VERSION  esp32-imu-node.code-workspace  sdkconfig  sdkconfig.esp32  sdkconfig.old
.github/workflows/: build-firmware.yml
components/apps/: CMakeLists.txt  blink.c  controller.c  data_client.c  monitor.c  network.c  playground.c  system_loop.c  tcp_client.c  time_sync.c  uart_monitor.c
components/ble/: CMakeLists.txt  ble_srv.c  ble_srv.h  gatt_srv.c
components/blink/: CMakeLists.txt  blink.c  blink.h
components/device/: CMakeLists.txt  device.c  device.h
components/functions/: command.c  dev.c  ota.c  parse.c
components/gy95/: CMakeLists.txt  gy95.c  gy95.h  imu.h  parse.c
components/imu/: CMakeLists.txt  imu.h
components/rest_controller/: CMakeLists.txt  rest_controller.c  rest_controller.h  (+2 more)
deprecated/: app_udp_client.c
docs/: CP210x-Install.md  hi229-setup.md
include/: apps.h  blink.h  controller.h  events.h  funcs.h  functions.h  globals.h  gy95.h  imu.h  main.h  modelspec.h  pins.h  settings.h  sys.h  types.h
main/: CMakeLists.txt  Kconfig.projbuild  app_blink.c  app_controller.c  app_main.c  app_tcp_client.c  app_time_sync.c  app_uart_monitor.c  app_udp_server.c  event.c  func_command.c  func_dev.c  func_ota.c  func_parse.c  globals.c  gy95.c
manifests/: partitions.csv
manuals/: README.md
ota/: prepare_firmware.sh  prepare_firmware_remote.sh
patches/: time_sync_smooth.patch
scripts/: ota_trigger.sh  setup_hi229.py
tests/: ellip.c  test_timestamp.py
(+61 files in other folders)
